--- a/public/.htaccess
+++ b/public/.htaccess
@@ -3,6 +3,9 @@
         Options -MultiViews -Indexes
     </IfModule>
 
+    # Set memory limit to 512MB
+    php_value memory_limit 512M
+
     RewriteEngine On
 
     # Handle Authorization Header
